Fix : some components and pages visibility

--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,7 @@ header {
     width: 180px;
     height: 50px;
     background-color: #44a2b6;
+    display: none;
 }
 
 nav ul {
